sbin/ifconfig/ifieee80211.c
@@ -4324,6 +4324,13 @@ list_roam(int s)
 	}
 }
 
+/* XXX TODO: rate-to-string method... */
+static const char*
+get_mcs_mbs_rate_str(uint8_t rate)
+{
+	return (rate & IEEE80211_RATE_MCS) ? "MCS " : "Mb/s";
+}
+
 static void
 list_txparams(int s)
 {
@@ -4340,19 +4347,23 @@ list_txparams(int s)
 		    mode == IEEE80211_MODE_VHT_2GHZ ||
 		    mode == IEEE80211_MODE_VHT_5GHZ) {
 			if (tp->ucastrate == IEEE80211_FIXED_RATE_NONE)
-				LINE_CHECK("%-7.7s ucast NONE    mgmt %2u MCS  "
-				    "mcast %2u MCS  maxretry %u",
+				LINE_CHECK("%-7.7s ucast NONE    mgmt %2u %s "
+				    "mcast %2u %s maxretry %u",
 				    modename[mode],
 				    tp->mgmtrate &~ IEEE80211_RATE_MCS,
+				    get_mcs_mbs_rate_str(tp->mgmtrate),
 				    tp->mcastrate &~ IEEE80211_RATE_MCS,
+				    get_mcs_mbs_rate_str(tp->mcastrate),
 				    tp->maxretry);
 			else
-				LINE_CHECK("%-7.7s ucast %2u MCS  mgmt %2u MCS  "
-				    "mcast %2u MCS  maxretry %u",
+				LINE_CHECK("%-7.7s ucast %2u MCS  mgmt %2u %s "
+				    "mcast %2u %s maxretry %u",
 				    modename[mode],
 				    tp->ucastrate &~ IEEE80211_RATE_MCS,
 				    tp->mgmtrate &~ IEEE80211_RATE_MCS,
+				    get_mcs_mbs_rate_str(tp->mgmtrate),
 				    tp->mcastrate &~ IEEE80211_RATE_MCS,
+				    get_mcs_mbs_rate_str(tp->mcastrate),
 				    tp->maxretry);
 		} else {
 			if (tp->ucastrate == IEEE80211_FIXED_RATE_NONE)
